# Chess-AI

./: .gitignore  README.md  pyproject.toml
src/chess_ai/: config.py  gui.py  main.py  prompts.py  utils.py
