[project]
name = "chess-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "mayconct32",email = "maycon326754@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain-core (>=1.4.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "pypdf (>=6.11.0,<7.0.0)",
    "chess (>=1.11.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "chess_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
